# features-maximization-metric

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
coverage/: covindex.html  d_16e4f0e538c2fa43_fmc_py.html  d_a44f0ac069e85531_test_fmc_py.html  index.html  status.json
credits/: index.html
docs/: usage.md
license/: index.html
reference/SUMMARY/: index.html
reference/cognitivefactory/features_maximization_metric/: index.html
reference/cognitivefactory/features_maximization_metric/fmc/: index.html
scripts/: multirun.sh  setup.sh
search/: search_index.json
src/cognitivefactory/features_maximization_metric/: __init__.py  fmc.py
tests/: __init__.py  test_fmc.py
usage/: index.html
