[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "cognitivefactory-features-maximization-metric"
description = "Implementation of Features Maximization Metric, an unbiased metric aimed at estimate the quality of an unsupervised classification."
keywords = [
    "python",
    "metrics",
    "feature selection",
	"features maximization",
]
authors = [
	{name = "Erwan Schild", email = "erwan.schild@e-i.com"}
]
license = {text = "CECILL-C"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = [
    "version",
    "classifiers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    # Functionnal dependencies.
    "scikit-learn>=0.24.1",
    "scipy>=1.7.3",
	
    # Technical dependencies.
	# None,
	
    # Safety dependencies.
	"numpy>=1.22.2",  # TODO: Vulnerability https://pyup.io/v/44715/f17
]

[project.urls]
Homepage = "https://cognitivefactory.github.io/features-maximization-metric"
Documentation = "https://cognitivefactory.github.io/features-maximization-metric"
Changelog = "https://cognitivefactory.github.io/features-maximization-metric/changelog"
Repository = "https://github.com/cognitivefactory/features-maximization-metric"
Issues = "https://github.com/cognitivefactory/features-maximization-metric/issues"
Discussions = "https://github.com/cognitivefactory/features-maximization-metric/discussions"

[tool.pdm]
includes = [
    "src/cognitivefactory",
]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = [
    "duty>=0.7",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
quality = [
    # TODO: remove once importlib-metadata version conflict is resolved
    #### "importlib-metadata<5; python_version < '3.8'",
    #### "flake8>=4; python_version >= '3.8'",
    "flake8>=4.0",
    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",

    # Safety dependencies.
    "gitpython>=3.1.30",  # TODO: Vulnerability https://pyup.io/v/52322/f17/
]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = [
    "safety>=2",

    # Safety dependencies.
    "certifi>=2022.12.7",  # TODO: Vulnerability https://pyup.io/v/52365/f17/
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
maintain = [
    "git-changelog>=0.4,<1.0",
]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "cognitivefactory"
include_trailing_comma = true
